--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: digitalscholarship@swarthmore.edu
 description: > # this means to ignore newlines until "baseurl:"
   Keystone DH 2017: Collaborative Jekyll Workshop
 
-github_username:  swat-ds
+github_username:  cppdigital
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
